// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should_fail_without_weak.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */
// This should fail without weak mode, because of the glaring type error.

function returns_a_string() {
  return "Hello";
}

function expects_an_int() {
  return returns_a_string() * 10;
}

=====================================output=====================================
/* @flow */
// This should fail without weak mode, because of the glaring type error.

function returns_a_string() {
  return "Hello";
}

function expects_an_int() {
  return returns_a_string() * 10;
}

================================================================================
`;

exports[`should_pass_with_weak.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow weak */
// This should fail without weak mode, because of the glaring type error.

function returns_a_string() {
  return "Hello";
}

function expects_an_int() {
  return returns_a_string() * 10;
}

=====================================output=====================================
/* @flow weak */
// This should fail without weak mode, because of the glaring type error.

function returns_a_string() {
  return "Hello";
}

function expects_an_int() {
  return returns_a_string() * 10;
}

================================================================================
`;
